--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <h2>{{'prescription.create.action' | translate}}</h2>
-
   <ng-container *ngIf="patientState$() as patientState">
     <app-create-multiple-prescriptions
       *ifStatusSuccess="patientState"
       [createPrescriptionForms]="prescriptionForms()"
       [patient]="patientState!.data!"
       [lang]="lang"
+      [errorCard]="errorCard"
       (clickAddPrescription)="addPrescription()"
       (clickDeletePrescription)="deletePrescriptionForm($event)"
       (clickPublish)="publishPrescriptions()"
