--- a/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.scss
+++ b/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.scss
@@ -5,9 +5,8 @@
 
 .patient {
   display: flex;
-  padding: 0 24px 16px;
-  column-gap: 1rem;
-  font-size: 14px;
+  padding: 0 var(--uhmep-sys-padding-md) var(--uhmep-sys-padding-sm);
+  column-gap: var(--uhmep-sys-gap);
 
   > div {
     flex-basis: 0;
@@ -22,11 +21,11 @@
 }
 
 .actions, .general-actions {
-  padding: 1rem 24px;
+  padding: 1rem var(--uhmep-sys-padding-md);
 
   > div {
     display: flex;
-    column-gap: 1rem;
+    column-gap: var(--uhmep-sys-gap);
 
     > div {
       flex-basis: 0;
@@ -40,27 +39,23 @@
 }
 
 .general-actions {
-  background-color: #f2f2f2;
+  background-color: var(--mat-sys-on-surface);
 
   button {
-    margin-right: 8px;
+    margin-right: var(--uhmep-sys-margin-sm);
   }
 }
 
 :host {
   &::ng-deep {
     .mat-expansion-panel-header {
-      background-color: #f2f2f2;
-
-      &:hover {
-        background-color: #e2e2e2;
-      }
+      background-color: var(--mat-sys-on-surface);
 
       &.mat-expanded {
-        background-color: #fff;
+        background-color: var(--mat-sys-surface-container);
 
         &:hover {
-          background-color: #f2f2f2;
+          background-color: var(--mat-sys-on-surface);
         }
       }
 
@@ -77,7 +72,7 @@
   }
 
   mat-panel-title.invalid {
-    color: #f44336;
+    color: var(--mdc-filled-text-field-error-label-text-color);
   }
 
   mat-panel-description {
