--- a/reuse/code/components/prescription-models-table/prescription-models-table.component.scss
+++ b/reuse/code/components/prescription-models-table/prescription-models-table.component.scss
@@ -56,7 +56,7 @@ tr.mat-mdc-row:not(:first-of-type) {
 }
 
 
-tr.no-prescriptions {
+tr.no-models {
   > td {
     text-align: center;
     cursor: none;
