--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -1,19 +1,27 @@
 <div class="container">
-  <h2>{{'prescription.create.action' | translate}}</h2>
-  <ng-container *ngIf="patientState$() as patientState">
-    <app-create-multiple-prescriptions
-      *ifStatusSuccess="patientState"
-      [createPrescriptionForms]="prescriptionForms()"
-      [patient]="patientState!.data!"
+  @if(intent === 'model') {
+    <h2>{{'prescription.model.title' | translate}}</h2>
+    <app-create-prescription-model
+      [prescriptionForm]="prescriptionForms()[0]"
       [lang]="lang"
-      [errorCard]="errorCard"
-      (clickAddPrescription)="addPrescription()"
-      (clickDeletePrescription)="deletePrescriptionForm($event)"
-      (clickPublish)="publishPrescriptions()"
-      (clickCancel)="cancelCreation()"
-    ></app-create-multiple-prescriptions>
-  </ng-container>
+      (modelSaved)="modelSaved()"
+    ></app-create-prescription-model>
+  } @else if(patientState$()) {
+    <h2>{{'prescription.create.action' | translate}}</h2>
 
+        <app-create-multiple-prescriptions
+          *ifStatusSuccess="patientState$()"
+          [createPrescriptionForms]="prescriptionForms()"
+          [intent]="intent"
+          [errorCard]="errorCard"
+          [patient]="patientState$()!.data!"
+          [lang]="lang"
+          (clickAddPrescription)="addPrescription()"
+          (clickDeletePrescription)="deletePrescriptionForm($event)"
+          (clickPublish)="publishPrescriptions()"
+          (clickCancel)="cancelCreation()"
+        ></app-create-multiple-prescriptions>
+  }
 </div>
 
 <app-overlay-spinner *ngIf="loading()"></app-overlay-spinner>
