--- a/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
+++ b/reuse/code/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
@@ -99,6 +99,7 @@
     }
   </mat-accordion>
 
+  @if (intent.toLowerCase() === 'order') {
   <div class="actions">
     <div>
       <div class="spacer">&nbsp;</div>
@@ -110,6 +111,7 @@
       </div>
     </div>
   </div>
+  }
   <div class="general-actions">
     <div>
       <div class="spacer">&nbsp;</div>
