--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.scss
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.scss
@@ -1,19 +1,20 @@
 @use '@angular/material' as mat;
 @use '../../../../node_modules/@smals/vas-evaluation-form-ui-material' as evf;
 
-$app-primary: mat.define-palette(mat.$light-blue-palette, 800);
-$app-accent: mat.define-palette(mat.$light-blue-palette, A200, A100, A400);
-$app-warn: mat.define-palette(mat.$red-palette);
-$app-theme: mat.define-light-theme((
+$app-primary: mat.m2-define-palette(mat.$m2-light-blue-palette, 800);
+$app-accent: mat.m2-define-palette(mat.$m2-light-blue-palette, A200, A100, A400);
+$app-warn: mat.m2-define-palette(mat.$m2-red-palette);
+$app-theme: mat.m2-define-light-theme((
   color: (
     primary: $app-primary,
     accent: $app-accent,
     warn: $app-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: mat.m2-define-typography-config(),
   density: 0,
 ));
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 @include mat.all-component-themes($app-theme);
 @include evf.evf-theme($app-primary, 800, 600, 700);
 
@@ -84,13 +85,13 @@ evf-dynamic-form {
 
 .infoblock {
   display: flex;
-  background-color: mat.get-color-from-palette($app-primary, 50);
+  background-color: mat.m2-get-color-from-palette($app-primary, 50);
   border-radius: 10px;
   padding: 12px;
   margin: 8px 0;
 
   i {
-    color: mat.get-color-from-palette($app-primary, 600);
+    color: mat.m2-get-color-from-palette($app-primary, 600);
   }
 
   span {
