--- a/wc-evf-form/src/styles.scss
+++ b/wc-evf-form/src/styles.scss
@@ -1,18 +1,20 @@
 @use '@angular/material' as mat;
-$app-primary: mat.define-palette(mat.$light-blue-palette, 800);
-$app-accent: mat.define-palette(mat.$light-blue-palette, A200, A100, A400);
-$app-warn: mat.define-palette(mat.$red-palette);
-$app-theme: mat.define-light-theme((
+$app-primary: mat.m2-define-palette(mat.$m2-light-blue-palette, 800);
+$app-accent: mat.m2-define-palette(mat.$m2-light-blue-palette, A200, A100, A400);
+$app-warn: mat.m2-define-palette(mat.$m2-red-palette);
+$app-theme: mat.m2-define-light-theme((
   color: (
     primary: $app-primary,
     accent: $app-accent,
     warn: $app-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: mat.m2-define-typography-config(),
   density: 0,
 ));
 
-@include mat.core();
-@include mat.core-theme($app-theme);
+@include mat.elevation-classes();
+@include mat.app-background();
+@include mat.elevation-classes();
+@include mat.app-background();
 @include mat.datepicker-theme($app-theme);
 @include mat.select-theme($app-theme);
