--- a/wc-prescription-details/src/mat-button-variants.scss
+++ b/wc-prescription-details/src/mat-button-variants.scss
@@ -1,19 +1,19 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-$theme-success: mat.define-palette(mat.$green-palette);
-$theme-error: mat.define-palette(mat.$red-palette);
+$theme-success: mat.m2-define-palette(mat.$m2-green-palette);
+$theme-error: mat.m2-define-palette(mat.$m2-red-palette);
 $hue: darker-contrast;
 
 @mixin color($theme) {
   button{
     &.mat-mdc-raised-button.mat-success {
-      background-color: mat.get-color-from-palette($theme-success, darker);
-      color: mat.get-color-from-palette($theme-success, $hue);
+      background-color: mat.m2-get-color-from-palette($theme-success, darker);
+      color: mat.m2-get-color-from-palette($theme-success, $hue);
     }
     &.mat-mdc-raised-button.mat-reject {
-      background-color: mat.get-color-from-palette($theme-error, darker);
-      color: mat.get-color-from-palette($theme-error, $hue);
+      background-color: mat.m2-get-color-from-palette($theme-error, darker);
+      color: mat.m2-get-color-from-palette($theme-error, $hue);
     }
   }
 }
