--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -1,27 +1,39 @@
-<div class="container">
-  @if (initialValues?.intent === 'model') {
-    <h2>{{'prescription.model.title' | translate}}</h2>
-    <app-create-prescription-model
-      [prescriptionForm]="prescriptionForms()[0]"
-      [lang]="lang"
-      (modelSaved)="modelSaved()"
-    ></app-create-prescription-model>
-  } @else if (patientState$() && initialValues?.intent) {
-    <h2>{{'prescription.create.action' | translate}}</h2>
+@if(isEnabled$ | async) {
+  <div class="container">
+    @if (initialValues?.intent === 'model') {
+      <h2>{{'prescription.model.title' | translate}}</h2>
+      <app-create-prescription-model
+        [prescriptionForm]="prescriptionForms()[0]"
+        [lang]="lang"
+        (modelSaved)="modelSaved()"
+      ></app-create-prescription-model>
+    } @else if (patientState$() && initialValues?.intent) {
+      <h2>{{'prescription.create.action' | translate}}</h2>
 
-        <app-create-multiple-prescriptions
-          *ifStatusSuccess="patientState$()"
-          [createPrescriptionForms]="prescriptionForms()"
-          [intent]="initialValues!.intent"
-          [errorCard]="errorCard"
-          [patient]="patientState$()!.data!"
-          [lang]="lang"
-          (clickAddPrescription)="addPrescription()"
-          (clickDeletePrescription)="deletePrescriptionForm($event)"
-          (clickPublish)="publishPrescriptions()"
-          (clickCancel)="cancelCreation()"
-        ></app-create-multiple-prescriptions>
-  }
-</div>
+      <app-create-multiple-prescriptions
+        *ifStatusSuccess="patientState$()"
+        [createPrescriptionForms]="prescriptionForms()"
+        [intent]="initialValues!.intent"
+        [errorCard]="errorCard"
+        [patient]="patientState$()!.data!"
+        [lang]="lang"
+        (clickAddPrescription)="addPrescription()"
+        (clickDeletePrescription)="deletePrescriptionForm($event)"
+        (clickPublish)="publishPrescriptions()"
+        (clickCancel)="cancelCreation()"
+      ></app-create-multiple-prescriptions>
+    }
 
-<app-overlay-spinner *ngIf="loading()"></app-overlay-spinner>
+  </div>
+
+  <app-overlay-spinner *ngIf="loading()"></app-overlay-spinner>
+} @else {
+  <app-error-card
+    [message]="'common.errors.pseudoDisabled' | translate"
+    [error]="errorResponseBadGateway"
+    [showRetry]="false"
+  ></app-error-card>
+}
+
+
+
