--- a/wc-evf-form/src/components/evf-form/evf-form.component.scss
+++ b/wc-evf-form/src/components/evf-form/evf-form.component.scss
@@ -32,6 +32,66 @@ $app-theme: mat.m2-define-light-theme((
   font-weight: bold;
 }
 
+evf-checkbox-list[data-evf-element-id="additional-relevant-information-checked"] {
+  .sub-group .checkbox-group {
+    &> div:last-child{
+      mat-checkbox{
+        pointer-events: unset;
+        opacity: 1;
+      }
+    }
+  }
+  .checkbox-group{
+    &> div:last-child{
+      mat-checkbox{
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
+evf-checkbox-list[data-evf-element-id="additional-relevant-information-unknown"] {
+  .sub-group .checkbox-group {
+    &> div{
+      mat-checkbox{
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+  }
+  .checkbox-group{
+    &> div:not(:last-child){
+      mat-checkbox{
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
+evf-checkbox-list[data-evf-element-id="previous-relevant-examinations-checked"] {
+  .checkbox-group{
+    &> div:last-child{
+      mat-checkbox{
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
+evf-checkbox-list[data-evf-element-id="previous-relevant-examinations-unknown"] {
+  .checkbox-group{
+    &> div:not(:last-child){
+      mat-checkbox{
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
 @media (min-width: 768px) {
   .evf-element-wrapper {
     display: flex;
