--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -15,8 +15,10 @@
         [createPrescriptionForms]="prescriptionForms()"
         [intent]="initialValues!.intent"
         [errorCard]="errorCard"
-        [patient]="patientState$()!.data!"
+        [patient]="patientState$().data"
+        [status]="status$.getValue()"
         [lang]="lang"
+        [getToken]="getToken"
         (clickAddPrescription)="addPrescription()"
         (clickDeletePrescription)="deletePrescriptionForm($event)"
         (clickPublish)="publishPrescriptions()"
