--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -18,7 +18,7 @@
         [patient]="patientState$().data"
         [status]="status$.getValue()"
         [lang]="lang"
-        [getToken]="getToken"
+        [services]="services"
         (clickAddPrescription)="addPrescription()"
         (clickDeletePrescription)="deletePrescriptionForm($event)"
         (clickPublish)="publishPrescriptions()"
